--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.3 
+  dropdown_button2: ^2.3.8
+  flutter_animated_button: ^2.0.3
 
 dev_dependencies:
   flutter_test:
