updated the schedule_screen.dart gumagana na ung save to pdf button. instead of ellipsis, nag sshow na kung ilan pang students ang meron

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   animations: ^2.0.8
   flutter_animate: ^4.2.0+1
   intl: ^0.18.1
+  printing: ^5.11.0
 
 dev_dependencies:
   flutter_test:
