--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_animate: ^4.2.0+1
   intl: ^0.18.1
   printing: ^5.11.0
+  flutter_form_builder: ^9.1.1
+  psgc_picker: ^1.0.2
 
 dev_dependencies:
   flutter_test:
