--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   printing: ^5.11.0
   flutter_form_builder: ^9.1.1
   psgc_picker: ^1.0.2
+  firebase_auth: ^4.14.0
+  firebase_core: ^2.22.0
 
 dev_dependencies:
   flutter_test:
